# actix-web-utoipa-jwtauth-sample

./: Cargo.toml  Dockerfile  MANUAL_OTEL_TEST.md  METRICS_SETUP.md  OTEL_TESTING.md  OTEL_TEST_FIXES.md  OTEL_VERIFICATION_SUMMARY.md  PERFORMANCE_TEST.md  README.en.md  README.md  benchmark-otel.sh  docker-compose.otel.yml  docker-compose.test.yml  docker-entrypoint.sh  openapi_schema.json  test-coverage-report.md  test-otel.sh  verify-metrics.sh
.kiro/specs/api-server-improvements/: api-endpoints.md  architecture.md  authentication.md  data-model.md  design.md  requirements.md  tasks.md
migrations/2023-03-23-002951_create_users/: up.sql
migrations/2023-04-10-023513_create_customer_categories/: down.sql  up.sql
migrations/2025-11-12-174351_add_performance_indexes/: down.sql  up.sql
src/: config.rs  constants.rs  errors.rs  lib.rs  main.rs  metrics.rs  middleware.rs  models.rs  schema.rs  swagger.rs  traits.rs
src/models/: customers.rs  users.rs
src/models/customers/: usecases.rs
src/models/users/: usecases.rs
src/services/: api.rs  auth.rs
src/services/api/: customers.rs  users.rs
tests/: auth_error_cases.rs  customer_categories.rs  jwt_auth.rs  ldap_mock_tests.rs  users_error_cases.rs
