[package]
default-run = "rust_api"
edition = "2021"
name = "rust_api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
chrono = "0.4.24"
diesel = {version = "2.0.0", features = ["postgres", "r2d2"]}
dotenvy = "0.15"
r2d2 = "0.8.10"
serde = {version = "1.0.158", features = ["derive"]}
serde_json = "1.0.94"
utoipa = {version = "3.1.2", features = ["actix_extras"]}
utoipa-swagger-ui = {version = "3.1.1", features = ["actix-web"]}
ldap3 = "0.11.1"
jsonwebtoken = "8.3.0"
futures-util = "0.3.27"
actix-web-httpauth = "0.8.0"
env_logger = "0.10.0"
log = "0.4.17"
envy = "0.4.2"
jwt-simple = "0.11.4"
validator = { version = "0.16.0", features = ["derive"] }
derive_more = "0.99.17"
diesel_migrations = "2.0.0"
