[package]
default-run = "rust_api"
edition = "2024"
name = "rust_api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "~4"
actix-cors = "~0"
chrono = "~0"
diesel = {version = "~2", features = ["postgres", "r2d2"]}
dotenvy = "~0"
r2d2 = "~0"
serde = {version = "~1", features = ["derive"]}
serde_json = "~1"
utoipa = {version = "~5", features = ["actix_extras"]}
utoipa-swagger-ui = {version = "~9", features = ["actix-web"]}
ldap3 = "~0"
jsonwebtoken = { version = "~10", features = ["use_pem", "rust_crypto"], default-features = true }
futures-util = "~0"
actix-web-httpauth = "~0"
env_logger = "~0.11"
log = "~0"
envy = "~0"
jwt-simple = "~0"
validator = { version = "~0", features = ["derive"] }
derive_more = "~2"
diesel_migrations = "~2"

# OpenTelemetry dependencies for observability
opentelemetry = { version = "~0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "~0", features = ["tonic", "metrics"] }
tracing = "~0"
tracing-opentelemetry = "~0"
tracing-subscriber = { version = "~0", features = ["env-filter", "json"] }
time = "~0"
